--- a/_config/config.yml
+++ b/_config/config.yml
@@ -5,3 +5,16 @@ Name: goldfinch-component-forms
 Goldfinch\Component\Forms\Admin\FormsAdmin:
   extensions:
     - Goldfinch\Helpers\Extensions\BlocksAdminExtension
+
+---
+Name: goldfinch-component-forms-icon
+Only:
+  moduleexists: 'goldfinch/enchantment'
+---
+
+Goldfinch\Component\Forms\Admin\FormsAdmin:
+  menu_icon_class: 'bi-send-fill'
+
+Goldfinch\Component\Forms\Blocks\FormBlock:
+  icon: 'bi-send-fill'
+
