--- a/_config/routes.yml
+++ b/_config/routes.yml
@@ -1,10 +1,9 @@
 ---
 Name: goldfinch-component-forms-routes
 After:
-  - '#rootroutes'
-  - '#coreroutes'
+  - "#rootroutes"
+  - "#coreroutes"
 ---
-
 SilverStripe\Control\Director:
   rules:
-    'thank-you': Goldfinch\Component\Forms\ThankYou
+    "thank-you": Goldfinch\Component\Forms\ThankYou
