--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "goldfinch/requester": "^1.0",
         "goldfinch/json-editor": "^1.0",
         "goldfinch/illuminate": "^1.0",
-        "goldfinch/blocks": "^1.0",
+        "goldfinch/helpers": "^1.0",
         "unclecheese/display-logic": "^3.0",
         "silvershop/silverstripe-hasonefield": "dev-main",
         "jonom/silverstripe-someconfig": "^1.0"
